refactor: ♻️ add `list-substances` and `get-substance` queries
