# apps/server/src/routes/v1/substance.ts
@@ -3,13 +3,45 @@
 import {TypedParam}                                 from "@nestia/core"
 import {Controller, Get, Logger, NotFoundException} from "@nestjs/common"
 import {ApiOperation, ApiProperty, ApiResponse}     from "@nestjs/swagger"
-import {string}                                     from "fp-ts"
+import {Substance}                                  from "db"
 import {PrismaService}                              from "../../core/modules/database/prisma/services/prisma-service.js"
+import {ApiModel}                                   from "../../utilities/docs-utils/swagger-api-model.js"
 
 
 
+@ApiModel({name: "Substance"})
 export class SubstanceResponse {
-	@ApiProperty({type: string}) id: string
+	@ApiProperty({
+		description: 'The ID of the substance',
+		example:     'clvdzrfzj0000f2ftr6cm3fjr',
+	}) id: string
+	@ApiProperty({
+		description: 'The name of the substance',
+		example:     '1,3-dimethylbutylamine',
+	}) name: string
+	@ApiProperty({
+		description: 'Common names of the substance',
+		example:     ['1,3-dimethylbutylamine', '1,4-Butanediol', '1P-ETH-LAD'],
+	}) common_names: string[]
+	@ApiProperty({
+		description: "Psychoactive Classes to which substance belong",
+		example:     ['Stimulants', 'Depressant', 'Psychedelic'],
+	}) psychoactive_classes: string[]
+	@ApiProperty({
+		description: "Chemical Classes to which substance belong",
+		example:     ['Amine', 'Alkanediol,Diol', 'Lysergamides'],
+	}) chemical_classes: string[]
+
+
+	static fromSubstance(substance: Substance): SubstanceResponse {
+		return {
+			id:                   substance.id,
+			name:                 substance.name,
+			common_names:         substance?.common_names?.split(',') ?? [],
+			psychoactive_classes: substance.psychoactive_class.split(','),
+			chemical_classes:     substance?.chemical_class?.split(',') ?? [],
+		}
+	}
 }
 
 
@@ -23,6 +55,7 @@ export class SubstanceController {
 
 	@ApiResponse({
 		status: 200,
+		type:   SubstanceResponse,
 	}) @Get(":id") @ApiOperation({summary: "Get substance by id"})
 	async getSubstanceById(@TypedParam('id') id: string): Promise<SubstanceResponse> {
 		this.logger.debug(`Fetching substance by id: ${id}`)
@@ -43,14 +76,17 @@ export class SubstanceController {
 		}
 
 		// Return substance
-		return substance
+		return SubstanceResponse.fromSubstance(substance)
 	}
 
 
-	@Get()
+	@ApiResponse({
+		status: 200,
+		type:   [SubstanceResponse],
+	}) @Get()
 	async getAllSubstances() {
 		const substances = await this.prismaService.substance.findMany()
 		this.logger.debug(`Found ${substances.length} substances`)
-		return substances
+		return substances.map(SubstanceResponse.fromSubstance)
 	}
 }
